force-app/main/default/objects/Contact/fields/SOI_ActionLabel__c.field-meta.xml
<CustomField>
    <fullName>SOI_ActionLabel__c</fullName>
    <formula>IF( SOI_MarkInactive__c, &#39;Inactive&#39;, &#39;Active&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Display status if Contact is active or inactive</inlineHelpText>
    <label>SOI_ActionLabel</label>
    <type>Text</type>
</CustomField>