force-app/main/default/objects/Contact/fields/SOI_AlternativeEmail__c.field-meta.xml
<CustomField>
    <fullName>SOI_AlternativeEmail__c</fullName>
    <label>SOI_AlternativeEmail</label>
    <type>Email</type>
</CustomField>