force-app/main/default/objects/Contact/fields/SOI_Certificate__c.field-meta.xml
<CustomField>
    <fullName>SOI_Certificate__c</fullName>
    <label>Safeguarding</label>
    <length>150</length>
    <type>Text</type>
</CustomField>