force-app/main/default/objects/Contact/fields/SOI_ClubConsID__c.field-meta.xml
<CustomField>
    <fullName>SOI_ClubConsID__c</fullName>
    <label>SOI_ClubConsID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>