force-app/main/default/objects/Contact/fields/SOI_ClubContact__c.field-meta.xml
<CustomField>
    <fullName>SOI_ClubContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SOI_ClubContact</label>
    <type>Checkbox</type>
</CustomField>