force-app/main/default/objects/Contact/fields/SOI_clubID_volID__c.field-meta.xml
<CustomField>
    <fullName>SOI_clubID_volID__c</fullName>
    <label>SOI_clubID_volID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>