force-app/main/default/objects/Contact/fields/SOI_ClubName__c.field-meta.xml
<CustomField>
    <fullName>SOI_ClubName__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SOI_ClubName</label>
    <type>Text</type>
</CustomField>