force-app/main/default/objects/Contact/fields/SOI_Comments__c.field-meta.xml
<CustomField>
    <fullName>SOI_Comments__c</fullName>
    <inlineHelpText>Add any special details if you would like to mention any</inlineHelpText>
    <label>SOI_Comments</label>
    <type>TextArea</type>
</CustomField>