force-app/main/default/objects/Contact/fields/SOI_ConsID__c.field-meta.xml
<CustomField>
    <fullName>SOI_ConsID__c</fullName>
    <label>ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>