force-app/main/default/objects/Contact/fields/SOI_IRImpID__c.field-meta.xml
<CustomField>
    <fullName>SOI_IRImpID__c</fullName>
    <label>SOI_IRImpID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>