force-app/main/default/objects/Contact/fields/SOI_IRLink__c.field-meta.xml
<CustomField>
    <fullName>SOI_IRLink__c</fullName>
    <label>SOI_IRLink</label>
    <length>100</length>
    <type>Text</type>
</CustomField>