force-app/main/default/objects/Contact/fields/SOI_IsNew__c.field-meta.xml
<CustomField>
    <fullName>SOI_IsNew__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SOI_IsNew</label>
    <type>Checkbox</type>
</CustomField>