force-app/main/default/objects/Contact/fields/SOI_MarkInactive__c.field-meta.xml
<CustomField>
    <fullName>SOI_MarkInactive__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Enable this checkbox to mark the contact to be inactivated from the system</inlineHelpText>
    <label>Mark to remove</label>
    <type>Checkbox</type>
</CustomField>