force-app/main/default/objects/Contact/fields/SOI_Medical_Expiry__c.field-meta.xml
<CustomField>
    <fullName>SOI_Medical_Expiry__c</fullName>
    <label>Medical Expiry</label>
    <type>Date</type>
</CustomField>