force-app/main/default/objects/Contact/fields/SOI_Membership_Card__c.field-meta.xml
<CustomField>
    <fullName>SOI_Membership_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Membership Card</label>
    <type>Checkbox</type>
</CustomField>