force-app/main/default/objects/Contact/fields/SOI_myRoles__c.field-meta.xml
<CustomField>
    <fullName>SOI_myRoles__c</fullName>
    <label>Roles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>