force-app/main/default/objects/Contact/fields/SOI_mySports__c.field-meta.xml
<CustomField>
    <fullName>SOI_mySports__c</fullName>
    <label>SOI_mySports</label>
    <length>255</length>
    <type>Text</type>
</CustomField>