force-app/main/default/objects/Contact/fields/SOI_Safeguarding__c.field-meta.xml
<CustomField>
    <fullName>SOI_Safeguarding__c</fullName>
    <label>SOI_ Safeguarding</label>
    <length>100</length>
    <type>Text</type>
</CustomField>