force-app/main/default/objects/Contact/fields/SOI_Status__c.field-meta.xml
<CustomField>
    <fullName>SOI_Status__c</fullName>
    <defaultValue>&#39;Not changed&#39;</defaultValue>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unchanged</fullName>
            </value>
            <value>
                <fullName>Edited</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>