force-app/main/default/objects/Contact/fields/SOI_VolunteerConsID__c.field-meta.xml
<CustomField>
    <fullName>SOI_VolunteerConsID__c</fullName>
    <description>ConsID for Volunteer records</description>
    <label>SOI_VolunteerConsID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>