force-app/main/default/objects/Contact/fields/SOI_VolunteerImportId__c.field-meta.xml
<CustomField>
    <fullName>SOI_VolunteerImportId__c</fullName>
    <label>SOI_VolunteerImportId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>