force-app/main/default/objects/Contact/fields/SOI_VolunteerType__c.field-meta.xml
<CustomField>
    <fullName>SOI_VolunteerType__c</fullName>
    <label>SOI_VolunteerType</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>general</fullName>
            </value>
            <value>
                <fullName>management</fullName>
            </value>
            <value>
                <fullName>coach</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>