force-app/main/default/objects/Contact/recordTypes/Athlete.recordType-meta.xml
<RecordType>
    <fullName>Athlete</fullName>
    <active>true</active>
    <label>Athlete</label>
</RecordType>