force-app/main/default/objects/Contact/validationRules/hasAccountId.validationRule-meta.xml
<ValidationRule>
    <fullName>hasAccountId</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(AccountId)</errorConditionFormula>
    <errorMessage>No Club has been specified, please try again or contact the administrator</errorMessage>
</ValidationRule>