force-app/main/default/objects/Contact/listViews/Athletes.listView-meta.xml
<ListView>
    <fullName>Athletes</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.BIRTHDATE</columns>
    <columns>SOI_ConsID__c</columns>
    <columns>SOI_Medical_Expiry__c</columns>
    <columns>SOI_Membership_Card__c</columns>
    <columns>SOI_Status__c</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Athlete</value>
    </filters>
    <label>Athletes</label>
</ListView>