force-app/main/default/objects/Contact/listViews/Volunteers.listView-meta.xml
<ListView>
    <fullName>Volunteers</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>SOI_ConsID__c</columns>
    <columns>SOI_VolunteerType__c</columns>
    <columns>SOI_Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Volunteer</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
        <value>Cabinteely Special Olympics Club</value>
    </filters>
    <label>Volunteers</label>
</ListView>